- Fixed videos failing to play
- Fixed missing caret in the search box
- Better toolbar and icon theme integration on Linux with Qt >= 4.6
- Completely removed tooltips
- Romanian translation by Ovidiu Niţan
- Greek translation by Giorgos Skettos
- Dutch translation by Brian Keetman
- Arabic translation by Sderawi
- Portuguese translation by Daniel Rodrigues
- Finnish translation by Jesse Jaara

0.9 - January 22, 2010
- Ability to clear recent keywords (by popular demand!)
- Show the toolbar when mouse hits the top of the screen in Fullscreen mode (Linux only)
- Show the playlist when mouse hits the left side of the screen in Fullscreen mode (Linux only)
- Fixed toolbar search suggestions working just once (Thanks to Salvatore Benedetto)
- Fixed toobar search incorrect handling of keys that also represent a shortcut (like Escape or Space)
- Fixed time formatting bug with videos longer than an hour (Thanks to Rene Bogusch)
- Fixed long queries in the recent keywords list (Thanks to Vadim P.)
- Norwegian translation by Jan W. Skjoldal

0.8.1 - November 20, 2009
- Fix showstopper bug: Normal quality videos won't play when HD mode is enabled
- Turkish translation by Ali E. İmrek

0.8 - November 16, 2009
- HD video support
- Volume level and mute is restored accross sessions
- No icons in menus on Linux (GNOME 2.28 style)
- Select search box text on Ctrl+F
- Handle HTTP_PROXY variable with trailing slash (Fix by Eduardo Suarez-Santana)
- Croatian translation by Srecko Belaic
- Latvian translation by Inga Muste
- Galician and Neutral Spanish translations by Miguel Anxo Bouzada
- Hungarian translation by Krisztián Horváth
- French translation by Guillaume Betous

0.7 - October 12, 2009
- Fixed "embedding disabled by request" message. All videos now play.
- Slightly faster playlist painting
- Fixed overflowing text in the playlist
- Fixed view crossfades on the Mac
- Fixed FreeDesktop icons on Linux

0.6.1 - September 15, 2009