@@ -1,0 +1,392 @@
+<!DOCTYPE TS><TS>
+<defaultcodec>UTF-8</defaultcodec>
+<context>
+    <name>AboutView</name>
+    <message>
+        <source>There&apos;s life outside the browser!</source>
+        <translation>Има живот и извън браузера!</translation>
+    </message>
+    <message>
+        <source>Version %1</source>
+        <translation>Версия %1</translation>
+    </message>
+    <message>
+        <source>%1 is Free Software but its development takes precious time.</source>
+        <translation>%1 е безплатен софтуер, но разработването му отнема безценно време.</translation>
+    </message>
+    <message>
+        <source>Please &lt;a href=&apos;%1&apos;&gt;donate&lt;/a&gt; to support the continued development of %2.</source>
+        <translation>Моля &lt;a href=&apos;%1&apos;&gt;дарете&lt;/a&gt; за да подкрепите бъдещите разработки, на %2.</translation>
+    </message>
+    <message>
+        <source>Report bugs and send in your ideas to %1</source>
+        <translation>Докладвайте за бъгове и изпращайте вашите идей на %1</translation>
+    </message>
+    <message>
+        <source>Icon designed by %1.</source>
+        <translation>Иконите са изработени от %1.</translation>
+    </message>
+    <message>
+        <source>Compact mode contributed by %1.</source>
+        <translation>Компактният режим е допринесен от %1.</translation>
+    </message>
+    <message>
+        <source>HTTP proxy support contributed by %1.</source>
+        <translation>HTTP proxy поддръжката е допринесена от %1.</translation>
+    </message>
+    <message>
+        <source>Translated by %1</source>
+        <translation>Преведено е от %1</translation>
+    </message>
+    <message>
+        <source>Released under the &lt;a href=&apos;%1&apos;&gt;GNU General Public License&lt;/a&gt;</source>
+        <translation>Издадено е под &lt;a href=&apos;%1&apos;&gt;GNU General Public License&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <source>&amp;Close</source>
+        <translation>&amp;Затваряне</translation>
+    </message>
+    <message>
+        <source>About</source>
+        <translation>Относно</translation>
+    </message>
+    <message>
+        <source>What you always wanted to know about %1 and never dared to ask</source>
+        <translation>Какво винаги сте искали да знаете за %1 , но никога не сте посмявали да попитате</translation>
+    </message>
+</context>
+<context>
+    <name>ClearButton</name>
+    <message>
+        <source>Clear</source>
+        <translation>Изчисти</translation>
+    </message>
+</context>
+<context>
+    <name>ListModel</name>
+    <message>
+        <source>Searching...</source>
+        <translation>Търся...</translation>
+    </message>
+    <message>
+        <source>Show %1 More</source>
+        <translation>Покажи %1 повече</translation>
+    </message>
+    <message>
+        <source>No videos</source>
+        <translation>Няма видеа</translation>
+    </message>
+    <message>
+        <source>No more videos</source>
+        <translation>Няма повече видеа</translation>
+    </message>
+</context>
+<context>
+    <name>LoadingWidget</name>
+    <message>
+        <source>Error</source>
+        <translation>Грешка</translation>
+    </message>
+</context>
+<context>
+    <name>MainWindow</name>
+    <message>
+        <source>&amp;Stop</source>
+        <translation>&amp;Спри</translation>
+    </message>
+    <message>
+        <source>Stop playback and go back to the search view</source>
+        <translation>Спри изпълнението и се върни в търсачката</translation>
+    </message>
+    <message>
+        <source>S&amp;kip</source>
+        <translation>П&amp;ропусни</translation>
+    </message>
+    <message>
+        <source>Skip to the next video</source>
+        <translation>Следващо видео</translation>
+    </message>
+    <message>
+        <source>&amp;Pause</source>
+        <translation>&amp;Пауза</translation>
+    </message>
+    <message>
+        <source>Pause playback</source>
+        <translation>Пауза на възпроизвеждането</translation>
+    </message>
+    <message>
+        <source>&amp;Full Screen</source>
+        <translation>&amp;Цял екран</translation>
+    </message>
+    <message>
+        <source>Go full screen</source>
+        <translation>Отвори в цял екран</translation>
+    </message>
+    <message>
+        <source>&amp;Compact mode</source>
+        <translation>&amp;Компактен режим</translation>
+    </message>
+    <message>
+        <source>Hide the playlist and the toolbar</source>
+        <translation>Скрии прейлистата и туулбара</translation>
+    </message>
+    <message>
+        <source>Open the &amp;YouTube page</source>
+        <translation>Отвори в &amp;YouTube страницата</translation>
+    </message>
+    <message>
+        <source>Go to the YouTube video page and pause playback</source>
+        <translation>Отиди в YouTube видео страницата и сложи на пауза</translation>
+    </message>
+    <message>
+        <source>Copy the YouTube &amp;link</source>
+        <translation>Копирай YouTube &amp;връзката</translation>
+    </message>
+    <message>
+        <source>Copy the current video YouTube link to the clipboard</source>
+        <translation>Постави връзка към видеото в YouTube в клипборда</translation>
+    </message>
+    <message>
+        <source>Copy the video stream &amp;URL</source>
+        <translation>Копирай &amp;URL на видео излъчването</translation>
+    </message>
+    <message>
+        <source>Copy the current video stream URL to the clipboard</source>
+        <translation>Копирай URL на гледаното видео в клипборда</translation>
+    </message>
+    <message>
+        <source>&amp;Remove</source>
+        <translation>&amp;Премахни</translation>
+    </message>
+    <message>
+        <source>Remove the selected videos from the playlist</source>
+        <translation>Премахни избраните виде от плейлистата</translation>
+    </message>
+    <message>
+        <source>Move &amp;Up</source>
+        <translation>Премести &amp;нагоре</translation>
+    </message>
+    <message>
+        <source>Move up the selected videos in the playlist</source>
+        <translation>Премести избраните видеа в плейлиста</translation>
+    </message>
+    <message>
+        <source>Move &amp;Down</source>
+        <translation>Премести &amp;надолу</translation>
+    </message>
+    <message>
+        <source>Move down the selected videos in the playlist</source>
+        <translation>Премести надолу в плейлиста избраните видеа</translation>
+    </message>
+    <message>
+        <source>&amp;Clear recent keywords</source>
+        <translation>&amp;Изчисти скорошните ключови думи</translation>
+    </message>
+    <message>
+        <source>Clear the search history. Cannot be undone.</source>
+        <translation>Изчисти историята на търсене. Не е обратимо.</translation>
+    </message>
+    <message>
+        <source>&amp;Quit</source>
+        <translation>&amp;Изход</translation>
+    </message>
+    <message>
+        <source>Ctrl+Q</source>
+        <translation>Ctrl+Q</translation>
+    </message>
+    <message>
+        <source>Bye</source>
+        <translation>Чао</translation>
+    </message>
+    <message>
+        <source>&amp;Website</source>
+        <translation>&amp;Уебсайт</translation>
+    </message>
+    <message>
+        <source>%1 on the Web</source>
+        <translation>%1 в мрежата</translation>
+    </message>
+    <message>
+        <source>Make a &amp;donation</source>
+        <translation>Направи &amp;дарение</translation>
+    </message>
+    <message>
+        <source>Please support the continued development of %1</source>
+        <translation>Моля подкрепете, бъдещите разработки на %1</translation>
+    </message>
+    <message>
+        <source>&amp;About</source>
+        <translation>&amp;Относно</translation>
+    </message>
+    <message>
+        <source>Info about %1</source>
+        <translation>Информация за %1</translation>
+    </message>
+    <message>
+        <source>Search</source>
+        <translation>Търси</translation>
+    </message>
+    <message>
+        <source>Mute volume</source>
+        <translation>Заглуши звука</translation>
+    </message>
+    <message>
+        <source>Ctrl+M</source>
+        <translation>Ctrl+M</translation>
+    </message>
+    <message>
+        <source>&amp;Application</source>
+        <translation>&amp;Апликация</translation>
+    </message>
+    <message>
+        <source>&amp;Playlist</source>
+        <translation>&amp;Плейлиста</translation>
+    </message>
+    <message>
+        <source>&amp;Video</source>
+        <translation>&amp;Видео</translation>
+    </message>
+    <message>
+        <source>&amp;Help</source>
+        <translation>&amp;Помощ</translation>
+    </message>
+    <message>
+        <source>Press %1 to raise the volume, %2 to lower it</source>
+        <translation>Натисни %1 за да увеличите звука, %2 да го намалите</translation>
+    </message>
+    <message>
+        <source>Opening %1</source>
+        <translation>Отваряне %1</translation>
+    </message>
+    <message>
+        <source>Fatal error: %1</source>
+        <translation>Фатална грешка: %1</translation>
+    </message>
+    <message>
+        <source>Error: %1</source>
+        <translation>Грешка: %1</translation>
+    </message>
+    <message>
+        <source>&amp;Play</source>
+        <translation>&amp;Възпроизвеждане</translation>
+    </message>
+    <message>
+        <source>Resume playback</source>
+        <translation>Възстанови възпроизвеждането</translation>
+    </message>
+    <message>
+        <source>Exit &amp;Full Screen</source>
+        <translation>Изход от &amp;Цял екран</translation>
+    </message>
+    <message>
+        <source>Remaining time: %1</source>
+        <translation>Оставащо време: %1</translation>
+    </message>
+    <message>
+        <source>Volume at %1%</source>
+        <translation>Звук на %1%</translation>
+    </message>
+    <message>
+        <source>Volume is muted</source>
+        <translation>Звука е заглушен</translation>
+    </message>
+    <message>
+        <source>Volume is unmuted</source>
+        <translation>Звука е отглушен</translation>
+    </message>
+    <message>
+        <source>Maximum video definition set to %1</source>
+        <translation>Максимално качество на видеото зададено на %1</translation>
+    </message>
+    <message>
+        <source>Your privacy is now safe</source>
+        <translation>Вашата интимност вече е обезопасена</translation>
+    </message>
+</context>
+<context>
+    <name>MediaView</name>
+    <message>
+        <source>Most relevant</source>
+        <translation>Най-уместни</translation>
+    </message>
+    <message>
+        <source>Most recent</source>
+        <translation>Най-скорошни</translation>
+    </message>
+    <message>
+        <source>Most viewed</source>
+        <translation>Най-гледани</translation>
+    </message>
+    <message>
+        <source>You can now paste the YouTube link into another application</source>
+        <translation>Вече можете да вмъкнете YouTube линка в друго приложение</translation>
+    </message>
+    <message>
+        <source>You can now paste the video stream URL into another application</source>
+        <translation>Вече можете да вмъкнете URL адреса на излъчването в друго приложение</translation>
+    </message>
+    <message>
+        <source>The link will be valid only for a limited time.</source>
+        <translation>Линка ще е валиден само за определено време.</translation>
+    </message>
+    <message>
+        <source>You&apos;re watching &quot;%1&quot;</source>
+        <translation>Вие гледате &quot;%1&quot;</translation>
+    </message>
+</context>
+<context>
+    <name>NetworkAccess</name>
+    <message>
+        <source>Network error: %1</source>
+        <translation>Мрежова грешка: %1</translation>
+    </message>
+</context>
+<context>
+    <name>PrettyItemDelegate</name>
+    <message>
+        <source>%1 views</source>
+        <translation>%1 гледания</translation>
+    </message>
+</context>
+<context>
+    <name>SearchLineEdit</name>
+    <message>
+        <source>Search</source>
+        <translation>Търси</translation>
+    </message>
+</context>
+<context>
+    <name>SearchView</name>
+    <message>
+        <source>Welcome to &lt;a href=&apos;%1&apos;&gt;%2&lt;/a&gt;,</source>
+        <translation>Добре дошли в &lt;a href=&apos;%1&apos;&gt;%2&lt;/a&gt;,</translation>
+    </message>
+    <message>
+        <source>Enter a keyword to start watching videos.</source>
+        <translation>Въведете ключова дума за да почнете да гледате видео клипчета.</translation>
+    </message>
+    <message>
+        <source>Watch</source>
+        <translation>Гледай</translation>
+    </message>
+    <message>
+        <source>Recent keywords</source>
+        <translation>Скорошни ключови думи</translation>
+    </message>
+    <message>
+        <source>A new version of %1 is available. Please &lt;a href=&apos;%2&apos;&gt;update to version %3&lt;/a&gt;</source>
+        <translation>Нова версия на %1 е достъпна. Моля &lt;a href=&apos;%2&apos;&gt;ъпдейтнете до версия %3&lt;/a&gt;</translation>
+    </message>
+    <message>
+        <source>Make yourself comfortable</source>
+        <translation>Отпуснете се</translation>
+    </message>
+</context>
+<context>
+    <name>Video</name>
+    <message>
+        <source>Network error: %1 for %2</source>
+        <translation>Мрежова грешка: %1 за %2</translation>
+    </message>
+</context>
+</TS>
