@@ -11,6 +11,7 @@
 - Arabic translation by Sderawi
 - Portuguese translation by Daniel Rodrigues
 - Finnish translation by Jesse Jaara
+- Bulgarian translation by Tsvyatko Makazchiev
 
 0.9 - January 22, 2010
 - Ability to clear recent keywords (by popular demand!)
